--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,34 +10,22 @@ on:
 
 jobs:
 
-  build:
-    name: Build
+  buildAndRelease:
+    name: Build and release
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go 1.13
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
 
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-      id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: Build
+        working-directory: src
+        run: go build -o ../dist/terraform-provider-nginx .
 
-    - name: Build
-      working-directory: src
-      run: go build -o ../dist/terraform-provider-nginx .
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    env:
-      GIT_AUTHOR_EMAIL: 64205253+stackhead-bot@users.noreply.github.com
-      GIT_AUTHOR_NAME: stackhead-bot
-      GIT_COMMITTER_EMAIL: 64205253+stackhead-bot@users.noreply.github.com
-      GIT_COMMITTER_NAME: stackhead-bot
-    steps:
-      - uses: actions/checkout@master
       - name: Setup node
         uses: actions/setup-node@v1
         with:
@@ -49,3 +37,8 @@ jobs:
         uses: saitho/semantic-release-action-pnpm@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    env:
+      GIT_AUTHOR_EMAIL: 64205253+stackhead-bot@users.noreply.github.com
+      GIT_AUTHOR_NAME: stackhead-bot
+      GIT_COMMITTER_EMAIL: 64205253+stackhead-bot@users.noreply.github.com
+      GIT_COMMITTER_NAME: stackhead-bot
