--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
 
+      - name: Test
+        working-directory: src
+        run: go test -v ./...
+
       - name: Build
         working-directory: src
         run: go build -o ../dist/terraform-provider-nginx .
