ci: separate test and build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,9 +9,7 @@ on:
     - master
 
 jobs:
-
-  buildAndRelease:
-    name: Build and release
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.13
@@ -25,6 +23,19 @@ jobs:
       - name: Test
         working-directory: src
         run: go test -v ./...
+
+  buildAndRelease:
+    needs: test
+    name: Build and release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.13
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
       - name: Build
         working-directory: src
