--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: Build and release
+name: Test and build
 
 on:
   push:
@@ -24,9 +24,8 @@ jobs:
         working-directory: src
         run: go test -v ./...
 
-  buildAndRelease:
+  build:
     needs: test
-    name: Build and release
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.13
@@ -45,20 +44,3 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           path: dist/terraform-provider-nginx
-
-      - name: Setup node
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - name: PNPM install
-        run: npm i -g pnpm && pnpm i -P
-      - run: pnpm install
-      - name: Semantic Release Action
-        uses: saitho/semantic-release-action-pnpm@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-    env:
-      GIT_AUTHOR_EMAIL: 64205253+stackhead-bot@users.noreply.github.com
-      GIT_AUTHOR_NAME: stackhead-bot
-      GIT_COMMITTER_EMAIL: 64205253+stackhead-bot@users.noreply.github.com
-      GIT_COMMITTER_NAME: stackhead-bot
