ci: clear cache before testing

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Test
         working-directory: src
-        run: go test -v ./...
+        run: go clean -testcache && go test -v ./...
 
   build:
     needs: test
