ci: set artifact name

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
+          name: terraform-provider-nginx
           path: dist/terraform-provider-nginx
 
   release:
