--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,6 +50,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
           name: terraform-provider-nginx
