--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,23 +9,7 @@ on:
     - master
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go 1.13
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.13
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
-
-      - name: Test
-        working-directory: src
-        run: go clean -testcache && go test -v ./...
-
   build:
-    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.13
@@ -40,21 +24,27 @@ jobs:
         working-directory: src
         run: go build -o ../dist/terraform-provider-nginx .
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.13
+        uses: actions/setup-go@v1
         with:
-          name: terraform-provider-nginx
-          path: dist/terraform-provider-nginx
+          go-version: 1.13
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Test
+        working-directory: src
+        run: go clean -testcache && go test -v ./...
 
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v2
-        with:
-          name: terraform-provider-nginx
-          path: dist/terraform-provider-nginx
       - name: Setup node
         uses: actions/setup-node@v1
         with:
