--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,9 +11,8 @@
 #
 name: release
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types: [created]
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
