--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,14 +2,7 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    [
-      "@semantic-release/github",
-      {
-        "assets": [
-          {"path": "dist/terraform-provider-nginx", "label": "Provider binary"}
-        ]
-      }
-    ]
+    "@semantic-release/github"
   ],
   "branches": [
     "master"
